@@ -1,80 +1,65 @@
-import com.google.common.collect.Lists;
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.util.List;
-import javax.annotation.Nullable;
-import org.apache.commons.lang3.StringUtils;
+import com.mojang.datafixers.util.Pair;
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.DataResult;
+import com.mojang.serialization.DynamicOps;
+import com.mojang.serialization.Lifecycle;
+import java.util.Optional;
 
-public class akn extends IOException {
-   private final List<akn.a> a = Lists.newArrayList();
-   private final String b;
+public final class akn<E> implements Codec<jm<E>> {
+   private final akp<? extends jz<E>> a;
 
-   public akn(String $$0) {
-      this.a.add(new akn.a());
-      this.b = $$0;
+   public static <E> akn<E> a(akp<? extends jz<E>> $$0) {
+      return new akn<>($$0);
    }
 
-   public akn(String $$0, Throwable $$1) {
-      super($$1);
-      this.a.add(new akn.a());
-      this.b = $$0;
+   private akn(akp<? extends jz<E>> $$0) {
+      this.a = $$0;
    }
 
-   public void a(String $$0) {
-      this.a.get(0).a($$0);
+   public <T> DataResult<T> a(jm<E> $$0, DynamicOps<T> $$1, T $$2) {
+      if ($$1 instanceof ako<?> $$3) {
+         Optional<jp<E>> $$4 = $$3.a(this.a);
+         if ($$4.isPresent()) {
+            if (!$$0.a($$4.get())) {
+               return DataResult.error(() -> "Element " + $$0 + " is not valid in current registry set");
+            }
+
+            return (DataResult<T>)$$0.d()
+               .map(
+                  $$2x -> akq.a.encode($$2x.a(), $$1, $$2),
+                  $$0x -> DataResult.error(() -> "Elements from registry " + this.a + " can't be serialized to a value")
+               );
+         }
+      }
+
+      return DataResult.error(() -> "Can't access registry " + this.a);
    }
 
-   public void b(String $$0) {
-      this.a.get(0).a = $$0;
-      this.a.add(0, new akn.a());
+   public <T> DataResult<Pair<jm<E>, T>> decode(DynamicOps<T> $$0, T $$1) {
+      if ($$0 instanceof ako<?> $$2) {
+         Optional<jn<E>> $$3 = $$2.b(this.a);
+         if ($$3.isPresent()) {
+            return akq.a
+               .decode($$0, $$1)
+               .flatMap(
+                  $$1x -> {
+                     akq $$2x = (akq)$$1x.getFirst();
+                     return $$3.get()
+                        .a(akp.a(this.a, $$2x))
+                        .<DataResult>map(DataResult::success)
+                        .orElseGet(() -> DataResult.error(() -> "Failed to get element " + $$2x))
+                        .map($$1xx -> Pair.of($$1xx, $$1x.getSecond()))
+                        .setLifecycle(Lifecycle.stable());
+                  }
+               );
+         }
+      }
+
+      return DataResult.error(() -> "Can't access registry " + this.a);
    }
 
    @Override
-   public String getMessage() {
-      return "Invalid " + this.a.get(this.a.size() - 1) + ": " + this.b;
-   }
-
-   public static akn a(Exception $$0) {
-      if ($$0 instanceof akn) {
-         return (akn)$$0;
-      } else {
-         String $$1 = $$0.getMessage();
-         if ($$0 instanceof FileNotFoundException) {
-            $$1 = "File not found";
-         }
-
-         return new akn($$1, $$0);
-      }
-   }
-
-   public static class a {
-      @Nullable
-      String a;
-      private final List<String> b = Lists.newArrayList();
-
-      a() {
-      }
-
-      void a(String $$0) {
-         this.b.add(0, $$0);
-      }
-
-      @Nullable
-      public String a() {
-         return this.a;
-      }
-
-      public String b() {
-         return StringUtils.join(this.b, "->");
-      }
-
-      @Override
-      public String toString() {
-         if (this.a != null) {
-            return this.b.isEmpty() ? this.a : this.a + " " + this.b();
-         } else {
-            return this.b.isEmpty() ? "(Unknown file)" : "(Unknown file) " + this.b();
-         }
-      }
+   public String toString() {
+      return "RegistryFixedCodec[" + this.a + "]";
    }
 }
