@@ -3,36 +3,42 @@ import com.mojang.brigadier.arguments.ArgumentType;
 import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.brigadier.exceptions.DynamicCommandExceptionType;
+import com.mojang.brigadier.suggestion.Suggestions;
+import com.mojang.brigadier.suggestion.SuggestionsBuilder;
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
+import java.util.concurrent.CompletableFuture;
 
-public class gb implements ArgumentType<xr> {
-   private static final Collection<String> b = List.of("{\"bold\": true}\n");
-   public static final DynamicCommandExceptionType a = new DynamicCommandExceptionType($$0 -> wu.b("argument.style.invalid", $$0));
-   private final jl.a c;
+public class gb implements ArgumentType<Integer> {
+   private static final Collection<String> a = Arrays.asList("container.5", "weapon");
+   private static final DynamicCommandExceptionType b = new DynamicCommandExceptionType($$0 -> wy.b("slot.unknown", $$0));
+   private static final DynamicCommandExceptionType c = new DynamicCommandExceptionType($$0 -> wy.b("slot.only_single_allowed", $$0));
 
-   private gb(jl.a $$0) {
-      this.c = $$0;
+   public static gb a() {
+      return new gb();
    }
 
-   public static xr a(CommandContext<eq> $$0, String $$1) {
-      return (xr)$$0.getArgument($$1, xr.class);
+   public static int a(CommandContext<et> $$0, String $$1) {
+      return (Integer)$$0.getArgument($$1, Integer.class);
    }
 
-   public static gb a(em $$0) {
-      return new gb($$0);
-   }
-
-   public xr a(StringReader $$0) throws CommandSyntaxException {
-      try {
-         return eu.a(this.c, $$0, xr.b.b);
-      } catch (Exception var4) {
-         String $$2 = var4.getCause() != null ? var4.getCause().getMessage() : var4.getMessage();
-         throw a.createWithContext($$0, $$2);
+   public Integer a(StringReader $$0) throws CommandSyntaxException {
+      String $$1 = ex.a($$0, $$0x -> $$0x != ' ');
+      crp $$2 = crq.a($$1);
+      if ($$2 == null) {
+         throw b.createWithContext($$0, $$1);
+      } else if ($$2.b() != 1) {
+         throw c.createWithContext($$0, $$1);
+      } else {
+         return $$2.a().getInt(0);
       }
    }
 
+   public <S> CompletableFuture<Suggestions> listSuggestions(CommandContext<S> $$0, SuggestionsBuilder $$1) {
+      return ey.b(crq.b(), $$1);
+   }
+
    public Collection<String> getExamples() {
-      return b;
+      return a;
    }
 }
