@@ -1,250 +1,48 @@
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
+import java.util.List;
+import java.util.Optional;
 
-public class ra {
-   public static final akj<ekh> a = qt.a("village/taiga/town_centers");
-   private static final akj<ekh> b = qt.a("village/taiga/terminators");
-
-   public static void a(qm<ekh> $$0) {
-      jk<eib> $$1 = $$0.a(lr.aP);
-      jj<eib> $$2 = $$1.b(sf.h);
-      jj<eib> $$3 = $$1.b(sf.i);
-      jj<eib> $$4 = $$1.b(sf.e);
-      jj<eib> $$5 = $$1.b(sf.l);
-      jj<eib> $$6 = $$1.b(sf.m);
-      jk<emw> $$7 = $$0.a(lr.aR);
-      jj<emw> $$8 = $$7.b(qu.f);
-      jj<emw> $$9 = $$7.b(qu.d);
-      jj<emw> $$10 = $$7.b(qu.k);
-      jj<emw> $$11 = $$7.b(qu.o);
-      jk<ekh> $$12 = $$0.a(lr.aT);
-      jj<ekh> $$13 = $$12.b(qt.a);
-      jj<ekh> $$14 = $$12.b(b);
+public interface ra {
+   static void a(qp<ejs> $$0) {
+      jn<ejm> $$1 = $$0.a(lu.aR);
+      jn<ddu> $$2 = $$0.a(lu.aF);
+      jm.c<ejs> $$3 = $$0.a(
+         ejf.a,
+         new ejs(
+            List.of(ejs.a($$1.b(ejg.t)), ejs.a($$1.b(ejg.u)), ejs.a($$1.b(ejg.v)), ejs.a($$1.b(ejg.w)), ejs.a($$1.b(ejg.x))), new ekh(34, 8, eki.a, 10387312)
+         )
+      );
+      $$0.a(ejf.b, new ejs($$1.b(ejg.f), new ekh(32, 8, eki.a, 14357617)));
+      $$0.a(ejf.c, new ejs($$1.b(ejg.g), new ekh(32, 8, eki.a, 14357618)));
+      $$0.a(ejf.d, new ejs($$1.b(ejg.e), new ekh(32, 8, eki.a, 14357619)));
+      $$0.a(ejf.e, new ejs($$1.b(ejg.j), new ekh(32, 8, eki.a, 14357620)));
+      $$0.a(ejf.f, new ejs($$1.b(ejg.a), new ekh(kh.g, ekj.c.b, 0.2F, 165745296, Optional.of(new ekj.a($$3, 10)), 32, 8, eki.a)));
+      $$0.a(ejf.q, new ejs($$1.b(ejg.F), new ekh(24, 8, eki.a, 20083232)));
+      $$0.a(ejf.g, new ejs($$1.b(ejg.l), new ekh(32, 5, eki.b, 10387313)));
+      $$0.a(ejf.h, new ejs($$1.b(ejg.d), new ekh(80, 20, eki.b, 10387319)));
+      $$0.a(ejf.i, new ejs($$1.b(ejg.r), new ekh(new kh(9, 0, 9), ekj.c.c, 0.01F, 0, Optional.empty(), 1, 0, eki.a)));
+      $$0.a(ejf.j, new ejs(List.of(ejs.a($$1.b(ejg.b)), ejs.a($$1.b(ejg.c))), new ekh(kh.g, ekj.c.d, 0.004F, 0, Optional.empty(), 1, 0, eki.a)));
       $$0.a(
-         a,
-         new ekh(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ekf.a("village/taiga/town_centers/taiga_meeting_point_1", $$8), 49),
-               Pair.of(ekf.a("village/taiga/town_centers/taiga_meeting_point_2", $$8), 49),
-               Pair.of(ekf.a("village/taiga/zombie/town_centers/taiga_meeting_point_1", $$9), 1),
-               Pair.of(ekf.a("village/taiga/zombie/town_centers/taiga_meeting_point_2", $$9), 1)
+         ejf.k,
+         new ejs(
+            List.of(
+               ejs.a($$1.b(ejg.y)),
+               ejs.a($$1.b(ejg.z)),
+               ejs.a($$1.b(ejg.A)),
+               ejs.a($$1.b(ejg.B)),
+               ejs.a($$1.b(ejg.C)),
+               ejs.a($$1.b(ejg.D)),
+               ejs.a($$1.b(ejg.E))
             ),
-            ekh.a.b
+            new ekh(40, 15, eki.a, 34222645)
          )
       );
-      qt.a(
-         $$0,
-         "village/taiga/streets",
-         new ekh(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ekf.a("village/taiga/streets/corner_01", $$10), 2),
-               Pair.of(ekf.a("village/taiga/streets/corner_02", $$10), 2),
-               Pair.of(ekf.a("village/taiga/streets/corner_03", $$10), 2),
-               Pair.of(ekf.a("village/taiga/streets/straight_01", $$10), 4),
-               Pair.of(ekf.a("village/taiga/streets/straight_02", $$10), 4),
-               Pair.of(ekf.a("village/taiga/streets/straight_03", $$10), 4),
-               Pair.of(ekf.a("village/taiga/streets/straight_04", $$10), 7),
-               Pair.of(ekf.a("village/taiga/streets/straight_05", $$10), 7),
-               Pair.of(ekf.a("village/taiga/streets/straight_06", $$10), 4),
-               Pair.of(ekf.a("village/taiga/streets/crossroad_01", $$10), 1),
-               Pair.of(ekf.a("village/taiga/streets/crossroad_02", $$10), 1),
-               Pair.of(ekf.a("village/taiga/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(ekf.a("village/taiga/streets/crossroad_04", $$10), 2),
-                  Pair.of(ekf.a("village/taiga/streets/crossroad_05", $$10), 2),
-                  Pair.of(ekf.a("village/taiga/streets/crossroad_06", $$10), 2),
-                  Pair.of(ekf.a("village/taiga/streets/turn_01", $$10), 3)
-               }
-            ),
-            ekh.a.a
-         )
-      );
-      qt.a(
-         $$0,
-         "village/taiga/zombie/streets",
-         new ekh(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ekf.a("village/taiga/zombie/streets/corner_01", $$10), 2),
-               Pair.of(ekf.a("village/taiga/zombie/streets/corner_02", $$10), 2),
-               Pair.of(ekf.a("village/taiga/zombie/streets/corner_03", $$10), 2),
-               Pair.of(ekf.a("village/taiga/zombie/streets/straight_01", $$10), 4),
-               Pair.of(ekf.a("village/taiga/zombie/streets/straight_02", $$10), 4),
-               Pair.of(ekf.a("village/taiga/zombie/streets/straight_03", $$10), 4),
-               Pair.of(ekf.a("village/taiga/zombie/streets/straight_04", $$10), 7),
-               Pair.of(ekf.a("village/taiga/zombie/streets/straight_05", $$10), 7),
-               Pair.of(ekf.a("village/taiga/zombie/streets/straight_06", $$10), 4),
-               Pair.of(ekf.a("village/taiga/zombie/streets/crossroad_01", $$10), 1),
-               Pair.of(ekf.a("village/taiga/zombie/streets/crossroad_02", $$10), 1),
-               Pair.of(ekf.a("village/taiga/zombie/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(ekf.a("village/taiga/zombie/streets/crossroad_04", $$10), 2),
-                  Pair.of(ekf.a("village/taiga/zombie/streets/crossroad_05", $$10), 2),
-                  Pair.of(ekf.a("village/taiga/zombie/streets/crossroad_06", $$10), 2),
-                  Pair.of(ekf.a("village/taiga/zombie/streets/turn_01", $$10), 3)
-               }
-            ),
-            ekh.a.a
-         )
-      );
-      qt.a(
-         $$0,
-         "village/taiga/houses",
-         new ekh(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ekf.a("village/taiga/houses/taiga_small_house_1", $$8), 4),
-               Pair.of(ekf.a("village/taiga/houses/taiga_small_house_2", $$8), 4),
-               Pair.of(ekf.a("village/taiga/houses/taiga_small_house_3", $$8), 4),
-               Pair.of(ekf.a("village/taiga/houses/taiga_small_house_4", $$8), 4),
-               Pair.of(ekf.a("village/taiga/houses/taiga_small_house_5", $$8), 4),
-               Pair.of(ekf.a("village/taiga/houses/taiga_medium_house_1", $$8), 2),
-               Pair.of(ekf.a("village/taiga/houses/taiga_medium_house_2", $$8), 2),
-               Pair.of(ekf.a("village/taiga/houses/taiga_medium_house_3", $$8), 2),
-               Pair.of(ekf.a("village/taiga/houses/taiga_medium_house_4", $$8), 2),
-               Pair.of(ekf.a("village/taiga/houses/taiga_butcher_shop_1", $$8), 2),
-               Pair.of(ekf.a("village/taiga/houses/taiga_tool_smith_1", $$8), 2),
-               Pair.of(ekf.a("village/taiga/houses/taiga_fletcher_house_1", $$8), 2),
-               new Pair[]{
-                  Pair.of(ekf.a("village/taiga/houses/taiga_shepherds_house_1", $$8), 2),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_armorer_house_1", $$8), 1),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_armorer_2", $$8), 1),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_fisher_cottage_1", $$8), 3),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_tannery_1", $$8), 2),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_cartographer_house_1", $$8), 2),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_library_1", $$8), 2),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_masons_house_1", $$8), 2),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_weaponsmith_1", $$8), 2),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_weaponsmith_2", $$8), 2),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_temple_1", $$8), 2),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_large_farm_1", $$11), 6),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_large_farm_2", $$11), 6),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_small_farm_1", $$8), 1),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_animal_pen_1", $$8), 2),
-                  Pair.of(ekf.g(), 6)
-               }
-            ),
-            ekh.a.b
-         )
-      );
-      qt.a(
-         $$0,
-         "village/taiga/zombie/houses",
-         new ekh(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ekf.a("village/taiga/zombie/houses/taiga_small_house_1", $$9), 4),
-               Pair.of(ekf.a("village/taiga/zombie/houses/taiga_small_house_2", $$9), 4),
-               Pair.of(ekf.a("village/taiga/zombie/houses/taiga_small_house_3", $$9), 4),
-               Pair.of(ekf.a("village/taiga/zombie/houses/taiga_small_house_4", $$9), 4),
-               Pair.of(ekf.a("village/taiga/zombie/houses/taiga_small_house_5", $$9), 4),
-               Pair.of(ekf.a("village/taiga/zombie/houses/taiga_medium_house_1", $$9), 2),
-               Pair.of(ekf.a("village/taiga/zombie/houses/taiga_medium_house_2", $$9), 2),
-               Pair.of(ekf.a("village/taiga/zombie/houses/taiga_medium_house_3", $$9), 2),
-               Pair.of(ekf.a("village/taiga/zombie/houses/taiga_medium_house_4", $$9), 2),
-               Pair.of(ekf.a("village/taiga/houses/taiga_butcher_shop_1", $$9), 2),
-               Pair.of(ekf.a("village/taiga/zombie/houses/taiga_tool_smith_1", $$9), 2),
-               Pair.of(ekf.a("village/taiga/houses/taiga_fletcher_house_1", $$9), 2),
-               new Pair[]{
-                  Pair.of(ekf.a("village/taiga/zombie/houses/taiga_shepherds_house_1", $$9), 2),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_armorer_house_1", $$9), 1),
-                  Pair.of(ekf.a("village/taiga/zombie/houses/taiga_fisher_cottage_1", $$9), 2),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_tannery_1", $$9), 2),
-                  Pair.of(ekf.a("village/taiga/zombie/houses/taiga_cartographer_house_1", $$9), 2),
-                  Pair.of(ekf.a("village/taiga/zombie/houses/taiga_library_1", $$9), 2),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_masons_house_1", $$9), 2),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_weaponsmith_1", $$9), 2),
-                  Pair.of(ekf.a("village/taiga/zombie/houses/taiga_weaponsmith_2", $$9), 2),
-                  Pair.of(ekf.a("village/taiga/zombie/houses/taiga_temple_1", $$9), 2),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_large_farm_1", $$9), 6),
-                  Pair.of(ekf.a("village/taiga/zombie/houses/taiga_large_farm_2", $$9), 6),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_small_farm_1", $$9), 1),
-                  Pair.of(ekf.a("village/taiga/houses/taiga_animal_pen_1", $$9), 2),
-                  Pair.of(ekf.g(), 6)
-               }
-            ),
-            ekh.a.b
-         )
-      );
-      $$0.a(
-         b,
-         new ekh(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ekf.a("village/plains/terminators/terminator_01", $$10), 1),
-               Pair.of(ekf.a("village/plains/terminators/terminator_02", $$10), 1),
-               Pair.of(ekf.a("village/plains/terminators/terminator_03", $$10), 1),
-               Pair.of(ekf.a("village/plains/terminators/terminator_04", $$10), 1)
-            ),
-            ekh.a.a
-         )
-      );
-      qt.a(
-         $$0,
-         "village/taiga/decor",
-         new ekh(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ekf.a("village/taiga/taiga_lamp_post_1"), 10),
-               Pair.of(ekf.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(ekf.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(ekf.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(ekf.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(ekf.a("village/taiga/taiga_decoration_5"), 2),
-               Pair.of(ekf.a("village/taiga/taiga_decoration_6"), 1),
-               Pair.of(ekf.a($$2), 4),
-               Pair.of(ekf.a($$3), 4),
-               Pair.of(ekf.a($$4), 2),
-               Pair.of(ekf.a($$5), 4),
-               Pair.of(ekf.a($$6), 1),
-               new Pair[]{Pair.of(ekf.g(), 4)}
-            ),
-            ekh.a.b
-         )
-      );
-      qt.a(
-         $$0,
-         "village/taiga/zombie/decor",
-         new ekh(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ekf.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(ekf.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(ekf.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(ekf.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(ekf.a($$2), 4),
-               Pair.of(ekf.a($$3), 4),
-               Pair.of(ekf.a($$4), 2),
-               Pair.of(ekf.a($$5), 4),
-               Pair.of(ekf.a($$6), 1),
-               Pair.of(ekf.g(), 4)
-            ),
-            ekh.a.b
-         )
-      );
-      qt.a(
-         $$0,
-         "village/taiga/villagers",
-         new ekh(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ekf.a("village/taiga/villagers/nitwit"), 1),
-               Pair.of(ekf.a("village/taiga/villagers/baby"), 1),
-               Pair.of(ekf.a("village/taiga/villagers/unemployed"), 10)
-            ),
-            ekh.a.b
-         )
-      );
-      qt.a(
-         $$0,
-         "village/taiga/zombie/villagers",
-         new ekh(
-            $$13,
-            ImmutableList.of(Pair.of(ekf.a("village/taiga/zombie/villagers/nitwit"), 1), Pair.of(ekf.a("village/taiga/zombie/villagers/unemployed"), 10)),
-            ekh.a.b
-         )
-      );
+      $$0.a(ejf.l, new ejs(List.of(ejs.a($$1.b(ejg.h)), ejs.a($$1.b(ejg.i))), new ekh(24, 4, eki.a, 165745295)));
+      $$0.a(ejf.m, new ejs(List.of(ejs.a($$1.b(ejg.m)), ejs.a($$1.b(ejg.n))), new ekh(20, 8, eki.a, 14357621)));
+      $$0.a(ejf.n, new ejs(List.of(ejs.a($$1.b(ejg.o), 2), ejs.a($$1.b(ejg.s), 3)), new ekh(27, 4, eki.a, 30084232)));
+      $$0.a(ejf.o, new ejs($$1.b(ejg.p), new ekh(2, 1, eki.a, 14357921)));
+      $$0.a(ejf.p, new ejs($$1.b(ejg.q), new ekh(20, 11, eki.b, 10387313)));
+      $$0.a(ejf.r, new ejs($$1.b(ejg.k), new ekg(32, 3, 128, $$2.b(awc.o))));
+      $$0.a(ejf.s, new ejs($$1.b(ejg.G), new ekh(34, 8, eki.a, 83469867)));
+      $$0.a(ejf.t, new ejs($$1.b(ejg.H), new ekh(34, 12, eki.a, 94251327)));
    }
 }
