@@ -1,53 +1,17 @@
-import java.util.List;
+import com.google.common.collect.ImmutableList;
 
 public class rp {
-   public static final akj<eay<?, ?>> a = rn.a("delta");
-   public static final akj<eay<?, ?>> b = rn.a("small_basalt_columns");
-   public static final akj<eay<?, ?>> c = rn.a("large_basalt_columns");
-   public static final akj<eay<?, ?>> d = rn.a("basalt_blobs");
-   public static final akj<eay<?, ?>> e = rn.a("blackstone_blobs");
-   public static final akj<eay<?, ?>> f = rn.a("glowstone_extra");
-   public static final akj<eay<?, ?>> g = rn.a("crimson_forest_vegetation");
-   public static final akj<eay<?, ?>> h = rn.a("crimson_forest_vegetation_bonemeal");
-   public static final akj<eay<?, ?>> i = rn.a("warped_forest_vegetation");
-   public static final akj<eay<?, ?>> j = rn.a("warped_forest_vegetation_bonemeal");
-   public static final akj<eay<?, ?>> k = rn.a("nether_sprouts");
-   public static final akj<eay<?, ?>> l = rn.a("nether_sprouts_bonemeal");
-   public static final akj<eay<?, ?>> m = rn.a("twisting_vines");
-   public static final akj<eay<?, ?>> n = rn.a("twisting_vines_bonemeal");
-   public static final akj<eay<?, ?>> o = rn.a("weeping_vines");
-   public static final akj<eay<?, ?>> p = rn.a("patch_crimson_roots");
-   public static final akj<eay<?, ?>> q = rn.a("basalt_pillar");
-   public static final akj<eay<?, ?>> r = rn.a("spring_lava_nether");
-   public static final akj<eay<?, ?>> s = rn.a("spring_nether_closed");
-   public static final akj<eay<?, ?>> t = rn.a("spring_nether_open");
-   public static final akj<eay<?, ?>> u = rn.a("patch_fire");
-   public static final akj<eay<?, ?>> v = rn.a("patch_soul_fire");
+   public static final akp<ebn<?, ?>> a = rq.a("end_spike");
+   public static final akp<ebn<?, ?>> b = rq.a("end_gateway_return");
+   public static final akp<ebn<?, ?>> c = rq.a("end_gateway_delayed");
+   public static final akp<ebn<?, ?>> d = rq.a("chorus_plant");
+   public static final akp<ebn<?, ?>> e = rq.a("end_island");
 
-   public static void a(qm<eay<?, ?>> $$0) {
-      rn.a($$0, a, ebl.Z, new edl(dfk.H.o(), dfk.kJ.o(), bps.a(3, 7), bps.a(0, 2)));
-      rn.a($$0, b, ebl.Y, new edj(bpj.a(1), bps.a(1, 4)));
-      rn.a($$0, c, ebl.Y, new edj(bps.a(2, 3), bps.a(5, 10)));
-      rn.a($$0, d, ebl.aa, new eee(dfk.dV.o(), dfk.dY.o(), bps.a(3, 7)));
-      rn.a($$0, e, ebl.aa, new eee(dfk.dV.o(), dfk.pr.o(), bps.a(3, 7)));
-      rn.a($$0, f, ebl.t);
-      ega $$1 = new ega(bor.<dsl>a().a(dfk.oD.o(), 87).a(dfk.ox.o(), 11).a(dfk.oo.o(), 1));
-      rn.a($$0, g, ebl.V, new edv($$1, 8, 4));
-      rn.a($$0, h, ebl.V, new edv($$1, 3, 1));
-      ega $$2 = new ega(bor.<dsl>a().a(dfk.oq.o(), 85).a(dfk.oD.o(), 1).a(dfk.oo.o(), 13).a(dfk.ox.o(), 1));
-      rn.a($$0, i, ebl.V, new edv($$2, 8, 4));
-      rn.a($$0, j, ebl.V, new edv($$2, 3, 1));
-      rn.a($$0, k, ebl.V, new edv(efq.a(dfk.or), 8, 4));
-      rn.a($$0, l, ebl.V, new edv(efq.a(dfk.or), 3, 1));
-      rn.a($$0, m, ebl.X, new eem(8, 4, 8));
-      rn.a($$0, n, ebl.X, new eem(3, 1, 2));
-      rn.a($$0, o, ebl.W);
-      rn.a($$0, p, ebl.i, rn.a(ebl.S, new eeh(efq.a(dfk.oD))));
-      rn.a($$0, q, ebl.ad);
-      rn.a($$0, r, ebl.k, new eek(eok.e.g(), true, 4, 1, jn.a(dfi::s, dfk.dV, dfk.dW, dfk.L, dfk.kJ, dfk.pr)));
-      rn.a($$0, s, ebl.k, new eek(eok.e.g(), false, 5, 0, jn.a(dfi::s, dfk.dV)));
-      rn.a($$0, t, ebl.k, new eek(eok.e.g(), false, 4, 1, jn.a(dfi::s, dfk.dV)));
-      rn.a($$0, u, ebl.i, rn.a(ebl.S, new eeh(efq.a(dfk.cr)), List.of(dfk.dV)));
-      rn.a($$0, v, ebl.i, rn.a(ebl.S, new eeh(efq.a(dfk.cs)), List.of(dfk.dX)));
+   public static void a(qp<ebn<?, ?>> $$0) {
+      rq.a($$0, a, eca.J, new eey(false, ImmutableList.of(), null));
+      rq.a($$0, b, eca.L, eed.a(aqt.a, true));
+      rq.a($$0, c, eca.L, eed.a());
+      rq.a($$0, d, eca.l);
+      rq.a($$0, e, eca.K);
    }
 }
